test/test_units/test_kclvm/test_types/invalid_test_data/select_attr/select_attr_2.k
schema Person:
    name: str
    age: int
    
person = Person {
    name: "Alice"
    age: 18
}
age = person.err_age
